--- a/language/EN.json
+++ b/language/EN.json
@@ -1,7 +1,7 @@
 {
     "__ASENAJSON__": true,
     "LANGUAGE": "English",
-    "LANGCODE": "en",
+    "LANGCODE": "EN",
     "AUTHOR": "Zenoixnoize",
     "STRINGS": {
         "_oldmeta": {
