GARFIELD V6.0 BY NOIZE PROJECTS  🐼
GARFIELD V6.0 BY NOIZE PROJECTS  🐼

--- a/language/EN.json
+++ b/language/EN.json
@@ -34,7 +34,7 @@
             "GIVE_ME_USER": "*Give me a user!*",
             "ADD_DESC": "Adds someone to the group.",
             "ADDED": "added to the group!",
-            "ALREADY_PROMOTED": "```How can I make someone admin who is already admin?```",
+            "ALREADY_PROMOTED": "```How can I make someone admin who is already admin?```",+
             "PROMOTED": "```, admin role was given!```",
             "PROMOTE_DESC": "Makes any person an admin.",
             "DEMOTE_DESC": "Takes the authority of any admin.",
@@ -78,7 +78,7 @@
             "RESTART_DESC": "Restart Garfield",
             "RESTART_MSG": "```Restarting...```",
             "SHUTDOWN_DESC": "Shutdown Garfield",
-            "SHUTDOWN_MSG": "```Shutting down 🐼```",
+            "SHUTDOWN_MSG": "```Shutting down ⛔```",
             "DYNO_DESC": "Check heroku dyno usage",
             "DYNO_TOTAL": "```Total Quota```",
             "DYNO_USED": "```Quota used```",
@@ -115,8 +115,8 @@
             "NOT_SET_WELCOME": "*You don't set the welcome message yet.!*\n**To set:** ```.welcome hi && hi#how are you?```",
             "WELCOME_ALREADY_SETTED": "*🐼 Welcome message already set!*\n*Message:* ```",
             "NEED_WELCOME_TEXT": "*You must write a message to set up the welcome message.*\n*Example:* ```.welcome hi && hi#how are you?```",
-            "WELCOME_DELETED": "*🐼 Garfield welcome message has been deleted successfully!*",
-            "WELCOME_SETTED": "*🐼 Garfield welcome message has been set successfully!*",
+            "WELCOME_DELETED": "*🐼 Welcome message has been deleted successfully!*",
+            "WELCOME_SETTED": "*🐼 Welcome message has been set successfully!*",
             "GOODBYE_DESC": "Sets the goodbye message. If you leave blank, it show's the goodbye message.",
             "NOT_SET_GOODBYE": "*You didn't set a goodbye message!*\n*To set:* ```.goodbye bye && bye#see ya```",
             "GOODBYE_ALREADY_SETTED": "*🐼 Goodbye message has been set!*\n*Message:* ```",
@@ -137,18 +137,18 @@
         "memes": {
             "MEMES_DESC": "Photo memes you replied to.",
             "NEED_REPLY": "*Reply to a photo!*",
-            "DOWNLOADING": "```Garfield making meme 💡```"
+            "DOWNLOADING": "```Downloading media & making meme...```"
         },
         "ocr": {
             "OCR_DESC": "Reads the text on the photo you have replied.",
             "NEED_REPLY": "*Reply to a photo!*",
-            "DOWNLOADING": "```Sending X-nodes Server 🐼```",
+            "DOWNLOADING": "```Media is downloading & reading...```",
             "ERROR": "```I couldn't read this :/```\n*Error:*```{}```",
             "RESULT": "*Language:* ```{}```\n*Here is what I read:* ```{}```"
         },
         "profile": {
             "KICKME_DESC": "It kicks you from the group you are using it in.",
-            "KICKME": "```Bye bye! I am going 🐼```",
+            "KICKME": "```Bye bye! I am going 🤠```",
             "PP_DESC": "Makes the profile photo what photo you reply.",
             "NEED_PHOTO": "*Give me a photo!*",
             "PPING": "```Setting profile photo...```",
@@ -167,11 +167,11 @@
             "REMOVEBG_DESC": "Removes the background of the photos.",
             "NEED_PHOTO": "*Give me a photo!*",
             "NO_API_KEY": "*You don't have an API key!*\nYou can get it here: remove.bg.",
-            "RBGING": "```Garfield removing background.. 🐼.```"
+            "RBGING": "```Garfield Removing background.. 💡.```"
         },
         "scrapers": {
             "TRANSLATE_DESC": "It translates with Google Translate. You must reply any message.",
-            "TRANSLATE_USAGE": ".trt en si (From English to Sinhala)",
+            "TRANSLATE_USAGE": ".trt si en (From Sinhala to English)",
             "NEED_REPLY": "```Please reply to any message!```",
             "LANG": "Language",
             "FROM": "Translated Language",
@@ -183,27 +183,27 @@
             "TTS_DESC": "It converts text to sound.",
             "TTS_ERROR": "```Error, Speech example of your sentence couldn't be made!```",
             "SONG_DESC": "Uploads the song you wrote.",
-            "NEED_TEXT_SONG": "*Please write a song!*\n*Example:* ```.song Levitating```",
-            "NO_RESULT": "*Garfield couldn't find anything :(*",
-            "DOWNLOADING_SONG": "```Garfield searching 🐼```",
-            "UPLOADING_SONG": "```Uploading song ☁️```",
+            "NEED_TEXT_SONG": "*Please write a song!*\n*Example:* ```.song eminem - rap god```",
+            "NO_RESULT": "*I couldn't find anything :(*",
+            "DOWNLOADING_SONG": "```Downloading your song...```",
+            "UPLOADING_SONG": "```Uploading your song...```",
             "VIDEO_DESC": "Downloads video from YouTube.",
-            "NEED_VIDEO": "*Please write a video link!*\n*Example:* ```.video https://youtu.be/msiaMwYcK0c```",
-            "DOWNLOADING_VIDEO": "```Garfield Downloading 🐼 🎥 ```",
-            "UPLOADING_VIDEO": "```Uploading video ☁️```",
+            "NEED_VIDEO": "*Please write a video link!*\n*Example:* ```.video https://www.youtube.com/watch?v=nAFlVm5qeBc```",
+            "DOWNLOADING_VIDEO": "```Downloading your video...```",
+            "UPLOADING_VIDEO": "```Uploading your video...```",
             "YT_DESC": "It searchs on YouTube.",
             "NEED_WORDS": "```Please write a few words!```",
-            "GETTING_VIDEOS": "```Garfield bringing videos... 🐼```",
+            "GETTING_VIDEOS": "```I'm bringing videos...```",
             "NOT_FOUND": "*I couldn't find anything :(*",
-            "SEARCHING": "```Searching... 🐼🔎```",
+            "SEARCHING": "* 🔎 Searching...*",
             "WIKI_DESC": "Searches query on Wikipedia.",
             "IMG_DESC": "Searches for related pics on Google.",
-            "IMG": "Garfield uploading photo ```{}``` number ```{} ```..."
+            "IMG": "Uploading photo ```{}``` number ```{} ```..."
         },
         "sticker": {
             "STICKER_DESC": "It converts your replied photo or video to sticker.",
             "NEED_REPLY": "*Reply to a photo or video!*",
-            "DOWNLOADING": "```Garfield Creating sticker... 💡 🐼```"
+            "DOWNLOADING": "```Media downloading & converting to sticker...```"
         },
         "system_stats": {
             "ALIVE_DESC": "Does bot work?",
@@ -213,7 +213,7 @@
             "TAGALL_DESC": "Tags everyone in the group.",
             "ADMİN": "*I am not admin in this group!*",
             "SCAN": "Checks whether the entered number is registered on WhatApp.",
-            "NO": "*Please Enter Any Phone Number!*\n*Example:* ```.scan 94xxxx```",
+            "NO": "*Please Enter Any Phone Number!*\n*Example:* ```.scan 90xxxx```",
             "SUC": "*Numbered Person Uses WhatsApp! 🐼*",
             "UNSUC": "*Numbered Person Does Not Use WhatsApp! ❌*",
             "TAGADMİN": "Tags group admins.",
@@ -225,14 +225,14 @@
         "updater": {
             "UPDATER_DESC": "Checks the update.",
             "UPDATE": "*Your bot is completely up-to-date!*",
-            "NEW_UPDATE": "*New update available for Garfield!*\n\nChanges:\n```",
+            "NEW_UPDATE": "*New update available for Bot!*\n\nChanges:\n```",
             "UPDATE_NOW_DESC": "It makes updates.",
-            "UPDATING": "*Garfield Updating to Latest version 🐼*\n\n```Name - Garfield bot\nVersion - v6.0\nDevelopers - NOIZE\nDate - 2022```",
+            "UPDATING": "_Updating..._",
             "INVALID_HEROKU": "*❌ Your Heroku information is wrong!*",
-            "UPDATED": "*Garfield updated to Latest version* \n *Version - 6.0* \n *Developed by NOIZE*",
-            "UPDATED_LOCAL": "*Garfield updated to latest version 🐼*",
+            "UPDATED": "*🐼 Successfully Updated!*",
+            "UPDATED_LOCAL": "*🐼 Successfully Updated!*",
             "AFTER_UPDATE": "*💬 Garfield Restarting Automatically!*",
-            "IN_AF": "*Please check* ```HEROKU_APP_NAME``` *and* ```app name``` *They must be same.*\n*If these two values ​​are the same, please restore* ```HEROKU_API_KEY```\n\n_To access these settings, use Heroku >> App >> Settings >> Reavel Config Vars_\n_To renew your API key, follow these steps, Heroku >> Account >> API Key then replace old api key in config vars._"
+            "IN_AF": "*Please check* ```HEROKU_APP_NAME``` *and* ```app name``` *They must be same.*\n*If these two values are the same, please restore* ```HEROKU_API_KEY```\n\n_To access these settings, use Heroku >> App >> Settings >> Reavel Config Vars_\n_To renew your API key, follow these steps, Heroku >> Account >> API Key then replace old api key in config vars._"
         },
         "whois": {
             "PL_DESC": "Displays metadata data of group or person.",
@@ -251,23 +251,23 @@
             "USER": " From User Number \n",
             "FROM": " From the group with ID, ",
             "MSG": "Message: \n\n",
-            "SUC": "*Message Successfully Saved to X-nodes!*"
+            "SUC": "*Message Successfully Saved to LOG!*"
         },
         "weather": {
             "WEATHER_DESC": "Shows the weather.",
-            "NEED_LOCATION": "* Please write a location!*\n*Example:* ```.weather rajagiriya```",
+            "NEED_LOCATION": "* Please write a location!*\n*Example:* ```.weather Bakü```",
             "LOCATION": "Location",
             "TEMP": "Temperature",
             "DESC": "Description",
             "HUMI": "Humidity",
             "WIND": "Wind Speed",
             "CLOUD": "Cloud",
-            "NOT_FOUND": "```I couldn't find a city with this name. 🐼```"
+            "NOT_FOUND": "```I couldn't find a city with this name. 😖```"
         },
         "web": {
             "SPEEDTEST_DESC": "Measures Download and Upload speed.",
             "SPEEDTESTING": "```Running speed test...```",
-            "SPEEDTEST_RESULT": "*Speed ​​test completed by NOIZE X-nodes Server*",
+            "SPEEDTEST_RESULT": "*Speed test completed!*",
             "UPLOAD": "Upload",
             "DOWNLOAD": "Download",
             "CALC": "Performs simple math operations.",
@@ -278,17 +278,17 @@
             "URL": "Shorten the long link."
         },
         "conventer": {
-            "MP4TOAUDİO_DESC": "Converts video to sound 🐼.",
-            "MP4TOAUDİO_NEEDREPLY": "*You Must Reply to a Video! 🐼*",
-            "MP4TOAUDİO": "```Converting Video to Audio.. 🐼```",
-            "ANİM_STİCK": "Converts animated stickers to video 🐼",
-            "ANİMATE": "```Converting Animated Sticker To Video.. 🐼```",
-            "STİCKER_DESC": "Converts the sticker to a photo 🐼",
-            "STİCKER_NEEDREPLY": "*You Must Reply to a sticker! 🐼*",
-            "STİCKER": "```Garfield Converting the sticker to a photo. 🐼.```",
-            "XMEDİA_DESC": "*NOIZE X-nodes media tools*",
+            "MP4TOAUDİO_DESC": "Converts video to sound.",
+            "MP4TOAUDİO_NEEDREPLY": "*You Must Reply to a Video!*",
+            "MP4TOAUDİO": "```Converting Video to Audio..```",
+            "ANİM_STİCK": "Converts animated stickers to video.",
+            "ANİMATE": "```Converting Animated Sticker To Video..```",
+            "STİCKER_DESC": "Converts the sticker to a photo.",
+            "STİCKER_NEEDREPLY": "*You Must Reply to a sticker!*",
+            "STİCKER": "```Converting the sticker to a photo..```",
+            "XMEDİA_DESC": "It is a plugin with more than 25 media tools.",
             "T_FALSE": "```❌ Incorrect Blend Effect Entered!```\n```🔎 Existing Commands:```\n\n*$dodge* - Applies a pink color filter to the video.\n*$multiply* - Applies a green color filter to the video.\n*$grainmerge* - Increases the contrast of the video.\n*$and* - Applies black lightning effect according to the speed of the video.\n*$or* - Applies a white lightning effect according to the speed of the video.\n*$burn* - Applies green contrast to video.\n*$difference* - Shows the differences by applying green relief to the video.\n*$grainextract* - Shows the differences by applying gray relief to the video.\n*$divide* - Demonstrates the differences by applying a pink relief to the video.\n*$xor* - Applies both green relief and lightning effect to video.\n*$hardmix* - Mixes the colors of the video into a yellow and red tone.\n*$negation* - Turns the dynamics of the video to pink.",
-            "T_NOT": "```💭 You Need To Enter Any Blend Effects!\n```🔎 Existing Commands:```\n\n*$dodge* - Applies a pink color filter to the video.\n*$multiply* - Applies a green color filter to the video.\n*$grainmerge* - Increases the contrast of the video.\n*$and* - Applies black lightning effect according to the speed of the video.\n*$or* - Applies a white lightning effect according to the speed of the video.\n*$burn* - Applies green contrast to video.\n*$difference* - Shows the differences by applying green relief to the video.\n*$grainextract* - Shows the differences by applying gray relief to the video.\n*$divide* - Demonstrates the differences by applying a pink relief to the video.\n*$xor* - Applies both green relief and lightning effect to video.\n*$hardmix* - Mixes the colors of the video into a yellow and red tone.\n*$negation* - Turns the dynamics of the video to pink \n *Coded by Tharindu Liyanage*.",
+            "T_NOT": "```💭 You Need To Enter Any Blend Effects!\n```🔎 Existing Commands:```\n\n*$dodge* - Applies a pink color filter to the video.\n*$multiply* - Applies a green color filter to the video.\n*$grainmerge* - Increases the contrast of the video.\n*$and* - Applies black lightning effect according to the speed of the video.\n*$or* - Applies a white lightning effect according to the speed of the video.\n*$burn* - Applies green contrast to video.\n*$difference* - Shows the differences by applying green relief to the video.\n*$grainextract* - Shows the differences by applying gray relief to the video.\n*$divide* - Demonstrates the differences by applying a pink relief to the video.\n*$xor* - Applies both green relief and lightning effect to video.\n*$hardmix* - Mixes the colors of the video into a yellow and red tone.\n*$negation* - Turns the dynamics of the video to pink.",
             "T_DESC": "Applies the selected TBlend effect to videos." 
         },
         "mute": {
@@ -456,7 +456,7 @@
             "ACCOUNT": "Account privacy",
             "PUBLIC": "Public",
             "HIDDEN": "Hidden",
-            "NOT_FOUND": "*Media Not Found!*"+
+            "NOT_FOUND": "*Media Not Found!*"
         },
         "github": {
             "GİTHUB_DESC": "Collects github information from the given username.\n🐼 Example: .github Zenoixnoize",
