GARFIELD V6.0 BY NOIZE PROJECTS  🐼
GARFIELD V6.0 BY NOIZE PROJECTS  🐼

--- a/language/TR.json
+++ b/language/TR.json
@@ -1,7 +1,7 @@
 {
     "__ASENAJSON__": true,
-    "LANGUAGE": "AZ",
-    "LANGCODE": "AZ",
+    "LANGUAGE": "TR",
+    "LANGCODE": "TR",
     "AUTHOR": "Zenoixnoize",
     "STRINGS": {
         "_oldmeta": {
