GARFIELD V6.0 BY NOIZE PROJECTS 🐼
GARFIELD V6.0 BY NOIZE PROJECTS 🐼

--- a/language/EN.json
+++ b/language/EN.json
@@ -4,7 +4,7 @@
     "LANGCODE": "en",
     "AUTHOR": "ZENOI",
     "STRINGS": {
-        "_oldmeta": {
+        "_asena": {
             "COMMAND": "Command",
             "DESC": "Description",
             "EXAMPLE": "Example",
