GARFIELD V6.0 BY NOIZE PROJECTS 🐼
GARFIELD V6.0 BY NOIZE PROJECTS 🐼

--- a/language/EN.json
+++ b/language/EN.json
@@ -185,12 +185,12 @@
             "SONG_DESC": "Uploads the song you wrote.",
             "NEED_TEXT_SONG": "*Please write a song!*\n*Example:* ```.song spectre alan walker```",
             "NO_RESULT": "*I couldn't find anything :(*",
-            "DOWNLOADING_SONG": "*Garfield Searching 🐼*",
-            "UPLOADING_SONG": "*Uploading your song...*",
+            "DOWNLOADING_SONG": "```Garfield Searching 🐼```",
+            "UPLOADING_SONG": "```Uploading song ☁️```",
             "VIDEO_DESC": "Downloads video from YouTube.",
-            "NEED_VIDEO": "*Please write a video link!*\n*Example:*.video https://youtu.be/msiaMwYcK0c*",
-            "DOWNLOADING_VIDEO": "*Garfield Downloading 🐼 🎥*",
-            "UPLOADING_VIDEO": "*Uploading your video...*",
+            "NEED_VIDEO": "*Please write a video link!*\n*Example:*.video* https://youtu.be/msiaMwYcK0c",
+            "DOWNLOADING_VIDEO": "```Garfield Downloading 🐼 🎥```",
+            "UPLOADING_VIDEO": "```Uploading your video...```",
             "YT_DESC": "It searchs on YouTube.",
             "NEED_WORDS": "```Please write a few words!```",
             "GETTING_VIDEOS": "```Garfield searching 🐼```",
