GARFIELD V6.0 BY NOIZE PROJECTS 🐼
GARFIELD V6.0 BY NOIZE PROJECTS 🐼

--- a/language/EN.json
+++ b/language/EN.json
@@ -190,7 +190,7 @@
             "VIDEO_DESC": "Downloads video from YouTube.",
             "NEED_VIDEO": "*Please write a video link!*\n*Example:*.video* https://youtu.be/msiaMwYcK0c",
             "DOWNLOADING_VIDEO": "```Garfield Downloading 🐼 🎥```",
-            "UPLOADING_VIDEO": "```Uploading your video...```",
+            "UPLOADING_VIDEO": "```Uploading video ☁️```",
             "YT_DESC": "It searchs on YouTube.",
             "NEED_WORDS": "```Please write a few words!```",
             "GETTING_VIDEOS": "```Garfield searching 🐼```",
