--- a/language/EN.json
+++ b/language/EN.json
@@ -188,7 +188,7 @@
             "DOWNLOADING_SONG": "```Garfield Searching 🐼```",
             "UPLOADING_SONG": "```Uploading song ☁️```",
             "VIDEO_DESC": "Downloads video from YouTube.",
-            "NEED_VIDEO": "*Please write a video link!*\n*Example:*.video* https://youtu.be/msiaMwYcK0c",
+            "NEED_VIDEO": "*Please write a video link!*\n*Example:.video https://youtu.be/msiaMwYcK0c*",
             "DOWNLOADING_VIDEO": "```Garfield Downloading 🐼 🎥```",
             "UPLOADING_VIDEO": "```Uploading video ☁️```",
             "YT_DESC": "It searchs on YouTube.",
